<resources>
    <string name="app_name">Missing and Unidentified People</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Missing People</string>
    <string name="tab_text_3">Unidentified People</string>
    <string name="scars_and_or_marks">Scars and/or Marks:</string>
    <string name="weight">Weight:</string>
    <string name="taraCalico">Tara Calico</string>
    <string name="race">Race:</string>
    <string name="height">Height:</string>
    <string name="sex">Sex:</string>
    <string name="returnBtn">return</string>
    <string name="taraCalicoTeenImgDescription">Brown haired girl with blue eyes that is wearing a blue sweater.</string>
    <string name="eyeColor">Eye color:</string>
    <string name="lastSeen">Last Seen:</string>
    <string name="placeOfBirth">Place of Birth:</string>
    <string name="hair">Hair:</string>
    <string name="description">Description</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="alexisTiaraMurphy">Alexis Tiara Murphy</string>
</resources>