<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAminaAndBelelKandil"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/amina_belel_kandil_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Amina and Belel Kandil"
        android:textColor="#000"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="7dp" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:maxWidth="300dp"
            android:maxHeight="300dp"
            app:srcCompat="@drawable/amina_and_belel_kandil_child">
            
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1433DF"
            android:textAllCaps="true"
            android:text="@string/lastSeen"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:id="@+id/lastSeen_aminaAndBelelKandil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text=""
            android:textColor="#000"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1433DF"
            android:textAllCaps="true"
            android:text="@string/description"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center">

            <TableRow>

                <TextView
                    android:id="@+id/dateOfBirth_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border"
                    android:text="@string/dateOfBirth"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hair_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/hair"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/placeOfBirth_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border"
                    android:text="@string/placeOfBirth"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eyeColor_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/eyeColor"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/race_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border"
                    android:text="@string/race"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/height"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/sex_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/border"
                    android:text="@string/sex"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weight_aminaAndBelelKandil"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/weight"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/scars_and_or_marks"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
        
    <Button
        android:id="@+id/returnMissingPersonScnBtn_kandil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onClickReturnToMissingPeopleScn_Kandil"
        android:text="Return" />
</LinearLayout>
</ScrollView>